<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.PersonalHomeFragment"
    android:background="@color/color_bg_theme">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                app:contentScrim="@color/color_bg_theme"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="parallax">

                    <ImageView
                        android:id="@+id/ivBg"
                        android:layout_width="match_parent"
                        android:layout_height="450dp"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/user_background_image"
                        tools:src="@drawable/personal_home_background"/>

                    <include
                        layout="@layout/personal_home_header"
                        android:id="@+id/home_header"/>
                </RelativeLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    app:layout_collapseMode="pin">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/iv_return"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:src="@mipmap/return_white"
                            android:background="@drawable/shape_circle_half_white"
                            android:padding="8dp"
                            android:layout_marginStart="10dp"
                            android:layout_centerVertical="true"
                            android:contentDescription="@string/back_button"
                            tools:ignore="RtlHardcoded"/>

                        <TextView
                            android:id="@+id/tvTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="药獸"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:visibility="gone"
                            android:layout_centerInParent="true"/>

                        <TextView
                            android:id="@+id/tvFocus"
                            android:layout_width="60dp"
                            android:layout_height="30dp"
                            android:background="@drawable/shape_round_red"
                            android:text="@string/follow"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:layout_centerVertical="true"
                            android:layout_toStartOf="@id/iv_more"
                            android:layout_marginEnd="10dp"
                            android:visibility="gone"
                            android:gravity="center"/>

                        <com.example.tiltok_xsb.ui.view.IconFontTextView
                            android:id="@+id/iv_more"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:text="@string/icon_more"
                            android:textSize="16sp"
                            android:textColor="@color/white"
                            android:layout_alignParentEnd="true"
                            android:gravity="center"
                            android:layout_marginEnd="10dp"
                            android:layout_centerVertical="true"
                            android:background="@drawable/shape_circle_half_white"
                            android:contentDescription="@string/more_options"
                            tools:ignore="RtlHardcoded"/>

                    </RelativeLayout>
                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/transparent"
                android:contentDescription="@string/tab_navigation"
                app:tabIndicatorColor="#FF9F00"
                app:tabIndicatorHeight="3dp"
                app:tabIndicatorFullWidth="false"
                app:tabSelectedTextColor="@color/white"
                app:tabTextColor="#CCCCCC"
                app:tabTextAppearance="@style/TabTextStyle"
                app:tabMode="fixed"
                app:tabGravity="center"
                app:tabRippleColor="@android:color/transparent"
                app:tabIndicatorGravity="bottom"/>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_pages"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>